Set link to logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
    <header class="bg-header">
        <div class="headerArea">
            <div class="container-headerArea">
-                <div class="logo"><img src="images/logo-white-1x.png" alt=""></div>
+                <a href="#">
+                    <div class="logo"><img src="images/logo-white-1x.png" alt=""></div>
+                </a>
                 <nav class="menu">
                     <a href="#">Home</a>
                     <a href="#about">About</a>
@@ -662,7 +664,7 @@
         <img src="images/footer-top-shape.png" class="footer-shape">
         <div class="content-inside-footer">
             <div class="footer-area1">
-                <img src="images/logo-white-1x.png" alt="">
+                <a href="#"><img src="images/logo-white-1x.png" alt="Appco Logo"></a>
                 <p>Holisticly empower premium architectures without value-added ideas. Seamlessly evolve cross-platform experiences.</p>
                 <div class="footer-icons">
                     <ul>
