Update footer logo link

--- a/index.html
+++ b/index.html
@@ -664,35 +664,39 @@
         <img src="images/footer-top-shape.png" class="footer-shape">
         <div class="content-inside-footer">
             <div class="footer-area1">
-                <a href="#"><img src="images/logo-white-1x.png" alt="Appco Logo"></a>
+                <a href="#">
+                    <div class="logo-footer">
+                        <img src="images/logo-white-1x.png" alt="Appco Logo">
+                    </div>
+                </a>
                 <p>Holisticly empower premium architectures without value-added ideas. Seamlessly evolve cross-platform experiences.</p>
                 <div class="footer-icons">
                     <ul>
-                        <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                        <li><a href=""><i class="fab fa-github-alt"></i></a></li>
-                        <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-github-alt"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-area2">
                 <h3>Resources</h3>
                 <ul>
-                    <li><a href="">Help</a></li>
-                    <li><a href="">Events</a></li>
-                    <li><a href="">Live Support</a></li>
-                    <li><a href="">Open Sources</a></li>
-                    <li><a href="">Documentation</a></li>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Events</a></li>
+                    <li><a href="#">Live Support</a></li>
+                    <li><a href="#">Open Sources</a></li>
+                    <li><a href="#">Documentation</a></li>
                 </ul>
             </div>
             <div class="footer-area3">
                 <h3>Company</h3>
                 <ul>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Careers</a></li>
-                    <li><a href="">Customers</a></li>
-                    <li><a href="">Community</a></li>
-                    <li><a href="">Our Team</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Customers</a></li>
+                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Our Team</a></li>
                 </ul>
             </div>
             <div class="footer-area4">
@@ -723,9 +727,9 @@
                 </div>
                 <div class="footer-links">
                     <ul>
-                        <li><a href="">Terms</a></li>
-                        <li><a href="">Security</a></li>
-                        <li><a href="">Privacy Policy</a></li>
+                        <li><a href="#">Terms</a></li>
+                        <li><a href="#">Security</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
             </div>
